modify table ejs

--- a/erd/table/templates/table_rs.ejs
+++ b/erd/table/templates/table_rs.ejs
@@ -190,9 +190,7 @@ DELETE FROM public.<%= table.pname %> AS t1
 "#;
 
 #[derive(Serialize, Deserialize, Debug, Clone, Builder, Default, FromRow)]
-#[builder(setter(into))]
-#[builder(default)]
-#[builder(field(public))]
+#[builder(setter(into), default, field(public))]
 pub struct <%= structName %> {
     <%- columns %>,
     pub created_uuid: Uuid,
@@ -208,7 +206,7 @@ pub struct <%= structName %> {
 }
 
 impl <%= structName %> {
-    pub async fn insert(&self, pg_pool: &Pool) -> Result<Self, sqlx::Error> {
+    pub async fn insert(&self, pool: &Pool) -> Result<Self, sqlx::Error> {
         sqlx::query_as(INSERT_SQL)
             <%- insertBinds %>
             .bind(self.created_uuid)
@@ -221,11 +219,11 @@ impl <%= structName %> {
             .bind(&self.updated_pg)
             .bind(&self.deleted_pg)
             .bind(&self.bk)
-            .fetch_one(pg_pool)
+            .fetch_one(pool)
             .await
     }
 
-    pub async fn update(&self, pg_pool: &Pool) -> Result<Self, sqlx::Error> {
+    pub async fn update(&self, pool: &Pool) -> Result<Self, sqlx::Error> {
         sqlx::query_as(UPDATE_SQL)
             <%- insertBinds %>
             .bind(self.created_uuid)
@@ -238,39 +236,39 @@ impl <%= structName %> {
             .bind(&self.updated_pg)
             .bind(&self.deleted_pg)
             .bind(&self.bk)
-            .fetch_one(pg_pool)
+            .fetch_one(pool)
             .await
     }
 
-    pub async fn delete(&self, pg_pool: &Pool) -> Result<Self, sqlx::Error> {
-        Self::delete_one(pg_pool, &self.uuid).await
+    pub async fn delete(&self, pool: &Pool) -> Result<Self, sqlx::Error> {
+        Self::delete_one(pool, &self.uuid).await
     }
 
-    pub async fn delete_one(pg_pool: &Pool, uuid: &Uuid) -> Result<Self, sqlx::Error> {
+    pub async fn delete_one(pool: &Pool, uuid: &Uuid) -> Result<Self, sqlx::Error> {
         sqlx::query_as(DELETE_SQL)
             .bind(uuid)
-            .fetch_one(pg_pool)
+            .fetch_one(pool)
             .await
     }
 
-    pub async fn delete_all(pg_pool: &Pool) -> Result<(), sqlx::Error> {
+    pub async fn delete_all(pool: &Pool) -> Result<(), sqlx::Error> {
         let _ = sqlx::query(DELETE_ALL_SQL)
-            .execute(pg_pool)
+            .execute(pool)
             .await?;
         Ok(())
     }
 
-    pub async fn select_all(pg_pool: &Pool) -> Result<Vec<Self>, sqlx::Error> {
+    pub async fn select_all(pool: &Pool) -> Result<Vec<Self>, sqlx::Error> {
         let rows: Vec<Self> = sqlx::query_as(SELECT_SQL)
-            .fetch_all(pg_pool)
+            .fetch_all(pool)
             .await?;
         Ok(rows)
     }
 
-    pub async fn select_one(pg_pool: &Pool, uuid: &Uuid) -> Result<Option<Self>, sqlx::Error> {
+    pub async fn select_one(pool: &Pool, uuid: &Uuid) -> Result<Option<Self>, sqlx::Error> {
         let one: Option<Self> = sqlx::query_as(&format!("{} WHERE t1.uuid = $1", SELECT_SQL))
             .bind(uuid)
-            .fetch_optional(pg_pool)
+            .fetch_optional(pool)
             .await?;
         Ok(one)
     }
