--- a/erd/table/templates/table_rs.ejs
+++ b/erd/table/templates/table_rs.ejs
@@ -61,10 +61,10 @@
     }).join(',\n    ');
     const insertColumns = table.columns.map((column) => {
         return  `${column.pname}`;
-    }).join('\n    ,');
+    }).join('\n        ,');
     const insertValues = table.columns.map((column, index) => {
         return  `$${index + 1}`;
-    }).join('\n    ,');
+    }).join('\n        ,');
     const insertBinds = table.columns.map((column, index) => {
         return  `.bind(${getRefer(column)}self.${column.pname})`;
     }).join('\n            ');
@@ -73,8 +73,8 @@
         return col_text;
       }).join('\n    ,');
     const selects = table.columns.map((column) => {
-        return  `t1.${column.pname}`;
-    }).join('\n    ,');
+        return  `${column.pname}`;
+    }).join('\n        ,');
 
     const fields = table.columns.map((column) => {
         return  `pub ${column.pname}: &'static str,`;
@@ -88,6 +88,7 @@ use serde::{Deserialize, Serialize};
 use uuid::Uuid;
 use derive_builder::Builder;
 use sqlx::prelude::*;
+use sql_query_builder as sqb;
 
 pub struct <%= structName %>Fields {
     <%- fields %>
@@ -102,113 +103,6 @@ pub struct <%= structName %>Fields {
     pub updated_uuid: &'static str,
     pub bk: &'static str,
 }
-
-const SELECT_SQL: &str = r#"
-SELECT
-    <%- selects %>
-    ,t1.created_uuid
-    ,t1.updated_uuid
-    ,t1.deleted_uuid
-    ,t1.created_at
-    ,t1.updated_at
-    ,t1.deleted_at
-    ,t1.created_pg
-    ,t1.updated_pg
-    ,t1.deleted_pg
-    ,t1.bk
-FROM
-    public.<%= table.pname %> AS t1
-"#;
-
-const INSERT_SQL: &str = r#"
-INSERT INTO public.<%= table.pname %> (
-    <%- insertColumns %>
-    ,created_uuid
-    ,updated_uuid
-    ,deleted_uuid
-    ,created_at
-    ,updated_at
-    ,deleted_at
-    ,created_pg
-    ,updated_pg
-    ,deleted_pg
-    ,bk
-) VALUES (
-    <%- insertValues %>
-    ,$<%- table.columns.length + 1 %>
-    ,$<%- table.columns.length + 2 %>
-    ,$<%- table.columns.length + 3 %>
-    ,$<%- table.columns.length + 4 %>
-    ,$<%- table.columns.length + 5 %>
-    ,$<%- table.columns.length + 6 %>
-    ,$<%- table.columns.length + 7 %>
-    ,$<%- table.columns.length + 8 %>
-    ,$<%- table.columns.length + 9 %>
-    ,$<%- table.columns.length + 10 %>
-) RETURNING
-    <%- insertColumns %>
-    ,created_uuid
-    ,updated_uuid
-    ,deleted_uuid
-    ,created_at
-    ,updated_at
-    ,deleted_at
-    ,created_pg
-    ,updated_pg
-    ,deleted_pg
-    ,bk
-"#;
-
-const UPDATE_SQL: &str = r#"
-UPDATE public.<%= table.pname %> AS t1 SET
-    <%- updates %>
-    ,created_uuid = $<%- table.columns.length + 1 %>
-    ,updated_uuid = $<%- table.columns.length + 2 %>
-    ,deletded_uuid = $<%- table.columns.length + 3 %>
-    ,created_at = $<%- table.columns.length + 4 %>
-    ,updated_at = $<%- table.columns.length + 5 %>
-    ,deleted_at = $<%- table.columns.length + 6 %>
-    ,created_pg = $<%- table.columns.length + 7 %>
-    ,updated_pg = $<%- table.columns.length + 8 %>
-    ,deleted_pg = $<%- table.columns.length + 9 %>
-    ,bk = $<%- table.columns.length + 10 %>
-WHERE
-    t1.uuid = $1
-RETURNING
-    <%- insertColumns %>
-    ,created_uuid
-    ,updated_uuid
-    ,deleted_uuid
-    ,created_at
-    ,updated_at
-    ,deleted_at
-    ,created_pg
-    ,updated_pg
-    ,deleted_pg
-    ,bk
-"#;
-
-const DELETE_SQL: &str = r#"
-DELETE FROM public.<%= table.pname %> AS t1
-WHERE
-    t1.uuid = $1
-RETURNING
-    <%- insertColumns %>
-    ,created_uuid
-    ,updated_uuid
-    ,deleted_uuid
-    ,created_at
-    ,updated_at
-    ,deleted_at
-    ,created_pg
-    ,updated_pg
-    ,deleted_pg
-    ,bk
-"#;
-
-const DELETE_ALL_SQL: &str = r#"
-DELETE FROM public.<%= table.pname %> AS t1
-"#;
 
 #[derive(Serialize, Deserialize, Debug, Clone, Builder, Default, FromRow)]
 #[builder(setter(into), default, field(public))]
@@ -243,8 +137,115 @@ impl <%= structName %> {
         bk: "bk",
     };
 
+    pub const SELECT_SQL: &str = r#"
+    SELECT
+        <%- selects %>
+        ,created_uuid
+        ,updated_uuid
+        ,deleted_uuid
+        ,created_at
+        ,updated_at
+        ,deleted_at
+        ,created_pg
+        ,updated_pg
+        ,deleted_pg
+        ,bk
+    FROM
+        public.<%= table.pname %>
+    "#;
+
+    pub const INSERT_SQL: &str = r#"
+    INSERT INTO public.<%= table.pname %> (
+        <%- insertColumns %>
+        ,created_uuid
+        ,updated_uuid
+        ,deleted_uuid
+        ,created_at
+        ,updated_at
+        ,deleted_at
+        ,created_pg
+        ,updated_pg
+        ,deleted_pg
+        ,bk
+    ) VALUES (
+        <%- insertValues %>
+        ,$<%- table.columns.length + 1 %>
+        ,$<%- table.columns.length + 2 %>
+        ,$<%- table.columns.length + 3 %>
+        ,$<%- table.columns.length + 4 %>
+        ,$<%- table.columns.length + 5 %>
+        ,$<%- table.columns.length + 6 %>
+        ,$<%- table.columns.length + 7 %>
+        ,$<%- table.columns.length + 8 %>
+        ,$<%- table.columns.length + 9 %>
+        ,$<%- table.columns.length + 10 %>
+    ) RETURNING
+        <%- insertColumns %>
+        ,created_uuid
+        ,updated_uuid
+        ,deleted_uuid
+        ,created_at
+        ,updated_at
+        ,deleted_at
+        ,created_pg
+        ,updated_pg
+        ,deleted_pg
+        ,bk
+    "#;
+
+    pub const UPDATE_SQL: &str = r#"
+    UPDATE public.<%= table.pname %> SET
+        <%- updates %>
+        ,created_uuid = $<%- table.columns.length + 1 %>
+        ,updated_uuid = $<%- table.columns.length + 2 %>
+        ,deletded_uuid = $<%- table.columns.length + 3 %>
+        ,created_at = $<%- table.columns.length + 4 %>
+        ,updated_at = $<%- table.columns.length + 5 %>
+        ,deleted_at = $<%- table.columns.length + 6 %>
+        ,created_pg = $<%- table.columns.length + 7 %>
+        ,updated_pg = $<%- table.columns.length + 8 %>
+        ,deleted_pg = $<%- table.columns.length + 9 %>
+        ,bk = $<%- table.columns.length + 10 %>
+    WHERE
+        uuid = $1
+    RETURNING
+        <%- insertColumns %>
+        ,created_uuid
+        ,updated_uuid
+        ,deleted_uuid
+        ,created_at
+        ,updated_at
+        ,deleted_at
+        ,created_pg
+        ,updated_pg
+        ,deleted_pg
+        ,bk
+    "#;
+
+    pub const DELETE_SQL: &str = r#"
+    DELETE FROM public.<%= table.pname %>
+    WHERE
+        uuid = $1
+    RETURNING
+        <%- insertColumns %>
+        ,created_uuid
+        ,updated_uuid
+        ,deleted_uuid
+        ,created_at
+        ,updated_at
+        ,deleted_at
+        ,created_pg
+        ,updated_pg
+        ,deleted_pg
+        ,bk
+    "#;
+
+    pub const DELETE_ALL_SQL: &str = r#"
+    DELETE FROM public.<%= table.pname %>
+    "#;
+
     pub async fn insert(&self, pool: &Pool) -> Result<Self, sqlx::Error> {
-        sqlx::query_as(INSERT_SQL)
+        sqlx::query_as(Self::INSERT_SQL)
             <%- insertBinds %>
             .bind(self.created_uuid)
             .bind(self.updated_uuid)
@@ -261,7 +262,7 @@ impl <%= structName %> {
     }
 
     pub async fn update(&self, pool: &Pool) -> Result<Self, sqlx::Error> {
-        sqlx::query_as(UPDATE_SQL)
+        sqlx::query_as(Self::UPDATE_SQL)
             <%- insertBinds %>
             .bind(self.created_uuid)
             .bind(self.updated_uuid)
@@ -282,28 +283,31 @@ impl <%= structName %> {
     }
 
     pub async fn delete_one(pool: &Pool, uuid: &Uuid) -> Result<Self, sqlx::Error> {
-        sqlx::query_as(DELETE_SQL)
+        sqlx::query_as(Self::DELETE_SQL)
             .bind(uuid)
             .fetch_one(pool)
             .await
     }
 
     pub async fn delete_all(pool: &Pool) -> Result<(), sqlx::Error> {
-        let _ = sqlx::query(DELETE_ALL_SQL)
+        let _ = sqlx::query(Self::DELETE_ALL_SQL)
             .execute(pool)
             .await?;
         Ok(())
     }
 
     pub async fn select_all(pool: &Pool) -> Result<Vec<Self>, sqlx::Error> {
-        let rows: Vec<Self> = sqlx::query_as(SELECT_SQL)
+        let rows: Vec<Self> = sqlx::query_as(Self::SELECT_SQL)
             .fetch_all(pool)
             .await?;
         Ok(rows)
     }
 
     pub async fn select_one(pool: &Pool, uuid: &Uuid) -> Result<Option<Self>, sqlx::Error> {
-        let one: Option<Self> = sqlx::query_as(&format!("{} WHERE t1.uuid = $1", SELECT_SQL))
+        let query = sqb::Select::new()
+            .raw(Self::SELECT_SQL)
+            .where_clause(&format!("{} = $1", Self::FIELDS.uuid));
+        let one: Option<Self> = sqlx::query_as(&query.as_string())
             .bind(uuid)
             .fetch_optional(pool)
             .await?;
